Pantalla de incio del menu comic

--- a/comicstore-web/src/main/resources/comicstore/i18n_es.properties
+++ b/comicstore-web/src/main/resources/comicstore/i18n_es.properties
@@ -25,6 +25,7 @@ action.select						= Seleccionar
 action.view							= Ver
 
 #Issue
+issue								= Número
 issue.add							= Añadir número
 issue.artists						= Autores
 issue.cover							= Portada
@@ -41,6 +42,7 @@ issue.writer						= Guionista
 issue.writers						= Guionistas
 
 #comic
+comic								= Cómic
 comic.add							= Añadir cómic
 comic.format						= Formato
 comic.genre							= Género
