--- a/comicstore-web/src/main/resources/comicstore/i18n_en.properties
+++ b/comicstore-web/src/main/resources/comicstore/i18n_en.properties
@@ -41,6 +41,7 @@ issue.writer						= Writer
 issue.writers						= Writers
 
 #comic
+comic								= Comic
 comic.add							= Add comic
 comic.format						= Format
 comic.genre							= Genre
@@ -49,16 +50,16 @@ comic.name							= Name
 comic.publisher						= Publisher
 comic.schedule						= Schedule
 comic.volume						= Volume
-comic.message.not_found				= No se ha encontrado ningún comic con ese nombre
-comic.message.add_comic				= Se está añadiendo un nuevo comic
-comic.one_number					= Es un único número
-comic.is_a_collection				= Es una colección
-comic.starts						= Empieza
-comic.ends							= Termina
+comic.message.not_found				= Comic not found
+comic.message.add_comic				= Adding a new comic
+comic.one_shoot						= One shoot
+comic.is_a_collection				= Is a collection
+comic.starts						= Starts
+comic.ends							= Ends
 
 #publisher
 publisher.name						= Name
 
 #author
 author.name							= Name
-author.surename						= Surename
+author.surename						= Surname
